<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:label="@string/nav_dashboard"
        android:name="com.osinniy.school.ui.dashboard.DashboardFragment"
        tools:layout="@layout/fragment_dashboard_admin" />

    <fragment
        android:id="@+id/navigation_history"
        android:label="@string/nav_history"
        android:name="com.osinniy.school.ui.history.HistoryFragment"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:label="@string/nav_notifications"
        android:name="com.osinniy.school.ui.notifications.NotificationsFragment"
        tools:layout="@layout/fragment_notifications" />

</navigation>