<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dash_icon_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/desc_group_icon" />

    <TextView
        android:id="@+id/dash_group_name_on_app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:textSize="22sp"
        android:textColor="@color/colorOnAppBar"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/dash_icon_group"
        app:layout_constraintBottom_toBottomOf="@id/dash_icon_group"
        app:layout_constraintStart_toEndOf="@id/dash_icon_group"
        tools:text="THIS IS A TEST GROUP" />

    <ImageButton
        android:id="@+id/dark_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_moon_32dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_photo"
        android:contentDescription="@string/desc_dark_mode"
        tools:visibility="visible" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="12dp"
        app:civ_border_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/desc_profile"/>

</androidx.constraintlayout.widget.ConstraintLayout>