<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.NewImportantActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/new_imp_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/new_imp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/app_bar_new_imp"
            app:titleTextColor="@color/colorOnAppBar"
            app:menu="@menu/done_app_bar_menu"
            app:navigationIcon="@drawable/ic_arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/new_imp_left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/new_imp_right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/new_imp_first_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_new_imp_first_msg"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/new_imp_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/new_imp_right_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_imp_text_input_lay_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/text_title"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintStart_toStartOf="@id/new_imp_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/new_imp_right_guideline"
            app:layout_constraintTop_toBottomOf="@id/new_imp_first_msg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_imp_edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_imp_text_input_lay_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/text_message"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:layout_constraintStart_toStartOf="@id/new_imp_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/new_imp_right_guideline"
            app:layout_constraintTop_toBottomOf="@id/new_imp_text_input_lay_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_imp_edit_text_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/new_imp_chips_layout"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginTop="12dp"-->
<!--            app:layout_constraintStart_toStartOf="@id/new_imp_left_guideline"-->
<!--            app:layout_constraintEnd_toEndOf="@id/new_imp_right_guideline"-->
<!--            app:layout_constraintTop_toBottomOf="@id/new_imp_text_input_lay_message">-->

<!--            <com.google.android.material.chip.Chip-->
<!--                android:id="@+id/new_imp_chip_send_notification"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                app:chipIcon="@drawable/ic_notifications_active"-->
<!--                android:text="@string/text_send_notification" />-->

<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/new_imp_second_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_new_imp_second_msg"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/new_imp_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/new_imp_right_guideline"
            app:layout_constraintTop_toBottomOf="@id/new_imp_text_input_lay_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>